--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
+    <link rel="stylesheet" href="file.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+        <img class="logo" src="./img/logo.svg" alt="">
+        </div> 
+    </header>
 </body>
 </html>
