[UPD] INTESTAZIONE E CARICAMENTO DELLE 2 FOTO

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <img class="logo" src="./img/logo.svg" alt="">
         </div> 
     </header>
+    <h1>
+        Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee 
+    </h1>
+    <span class="grigio">Scritto da <span class="blu">The Booleaner</span>
+    </span>
+    <br>
+    <span class="grigio">il 10/10/2020</span>
+    <br>
+    <img src="./img/tim-1.jpg" alt="">
+    <img src="./img/tim-2.jpg" alt="">
+    
 </body>
 </html>
