[UPD] PARAGRAFO E LISTA NON ORDINATA

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
     <header>
         <div>
-        <img class="logo" src="./img/logo.svg" alt="">
-        </div> 
+         <img class="logo" src="./img/logo.svg" alt=""> 
+        </div>    
     </header>
+    <main>
+    <div>
+    <br>
     <h1>
         Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee 
     </h1>
@@ -19,9 +22,27 @@
     </span>
     <br>
     <span class="grigio">il 10/10/2020</span>
+    </div>
     <br>
     <img src="./img/tim-1.jpg" alt="">
     <img src="./img/tim-2.jpg" alt="">
-    
-</body>
+    <br>
+    <span>1st Photo : John S. and James L. Knight Foundation, by Scott Henrichsen</span>
+    <br>
+    <span>2nd Photo: Wikimedia, by Paul Clarke</span>
+
+    <div>
+    <br>
+    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="giallo"> beatae tempore ipsa temporibus laborum,</span> rerum voluptatum ea nemo ullam iste sint aut quos maxime doloremque, nostrum, harum quae dolorem vitae.</p>
+       
+        <br>
+        <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi velit recusandae perspiciatis deserunt ut enim quas facere dolorum ad provident beatae, optio, earum ea, et quisquam excepturi odio explicabo a!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptatem itaque, qui, consectetur aliquam cumque repellat, error labore consequuntur soluta quos? Laborum beatae aperiam delectus reprehenderit temporibus eius perspiciatis quod.</li>
+        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias deleniti eveniet iure maiores nisi. Reprehenderit, aliquid debitis architecto, natus cumque in magni incidunt reiciendis a libero illo sed sit rerum!</li>
+        </ul>
+    </div>
+    </main>
+
+    </body>
 </html>
