--- a/index.html
+++ b/index.html
@@ -42,6 +42,36 @@
         <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias deleniti eveniet iure maiores nisi. Reprehenderit, aliquid debitis architecto, natus cumque in magni incidunt reiciendis a libero illo sed sit rerum!</li>
         </ul>
     </div>
+    <br>
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th class="colore-intestazione">Lorem ipsum dolorum</th>
+                    <th class="colore-intestazione">Lorem ipsum dolorum</th>
+                    <th class="colore-intestazione">Lorem ipsum dolorum</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="azzurro">Lorem ipsum dolorum</td>
+                    <td class="azzurro">Lorem ipsum dolorum</td>
+                    <td class=" azzurro"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium saepe tenetur iste quibusdam tempora earum hic nihil numquam nesciunt dignissimos, aut ullam dolor quia maiores, inventore voluptatem animi eum ipsum.</p></td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolorum</td>
+                    <td>Lorem ipsum dolorum</td>
+                    <td><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptatum dolores perferendis, a quis amet odit enim possimus neque ipsam voluptas reiciendis quos recusandae aperiam voluptate rerum distinctio praesentium fugiat.</p></td>
+                </tr>
+                <tr>
+                    <td class="azzurro">Lorem ipsum dolorum</td>
+                    <td class="azzurro">Lorem ipsum dolorum</td>
+                    <td class="azzurro"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis similique exercitationem hic modi iste odit praesentium, quasi incidunt, deleniti nulla maiores. Labore, quibusdam facere! Quidem ducimus doloribus eius eaque nihil.</p></td>
+                </tr>
+            </tbody>
+           
+        </table>
+    </div>
     </main>
 
     </body>
