[UPD] ALTRO TESTO

--- a/index.html
+++ b/index.html
@@ -56,23 +56,29 @@
                 <tr>
                     <td class="azzurro">Lorem ipsum dolorum</td>
                     <td class="azzurro">Lorem ipsum dolorum</td>
-                    <td class=" azzurro"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium saepe tenetur iste quibusdam tempora earum hic nihil numquam nesciunt dignissimos, aut ullam dolor quia maiores, inventore voluptatem animi eum ipsum.</p></td>
+                    <td class=" azzurro">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium saepe tenetur iste quibusdam tempora earum hic nihil numquam nesciunt dignissimos, aut ullam dolor quia maiores, inventore voluptatem animi eum ipsum.</td>
                 </tr>
                 <tr>
                     <td>Lorem ipsum dolorum</td>
                     <td>Lorem ipsum dolorum</td>
-                    <td><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptatum dolores perferendis, a quis amet odit enim possimus neque ipsam voluptas reiciendis quos recusandae aperiam voluptate rerum distinctio praesentium fugiat.</p></td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptatum dolores perferendis, a quis amet odit enim possimus neque ipsam voluptas reiciendis quos recusandae aperiam voluptate rerum distinctio praesentium fugiat.</td>
                 </tr>
                 <tr>
                     <td class="azzurro">Lorem ipsum dolorum</td>
                     <td class="azzurro">Lorem ipsum dolorum</td>
-                    <td class="azzurro"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis similique exercitationem hic modi iste odit praesentium, quasi incidunt, deleniti nulla maiores. Labore, quibusdam facere! Quidem ducimus doloribus eius eaque nihil.</p></td>
+                    <td class="azzurro"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis similique exercitationem hic modi iste odit praesentium, quasi incidunt, deleniti nulla maiores. Labore, quibusdam facere! Quidem ducimus doloribus eius eaque nihil.</td>
                 </tr>
             </tbody>
            
         </table>
+        <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur cupiditate <span class="giallo">natus voluptates labore rerum sit commodi distinctio,</span> architecto sapiente repellat eum, incidunt, reiciendis provident aut cumque non tempora voluptatem inventore.</p>
     </div>
+
+    <br>
+        <h3 class="grigio">Potrebbero interessarti </h3>
     </main>
+    
 
     </body>
 </html>
