[UPD] OTTIMIZZAZIONE EFFETTUATA

--- a/bonus/index2.html
+++ b/bonus/index2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Booleaner</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -19,9 +19,9 @@
   <main>
     <div class="container">
       <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-      <h3 class="grigio">Scritto da The Booleaner</span></h3>
+      <h3 class="grigio">Scritto da <span class="azzurro">The Booleaner</span></h3>
       <p class="grigio">il 10/10/2020</p>
-      <div class="immagine_main">
+      <div class="foto">
         <img src="./img/tim-1.jpg" alt="">
         <img src="./img/tim-2.jpg" alt="">
         <div class="didascalia">
@@ -85,10 +85,10 @@
   <footer>
     <div class="container">
       <h2 class="grigio">Potrebbero interessarti </h2>
-      <div class="immagine_footer" id="monitor">
+      <div class="immagine" id="monitor">
         <h3>Lorem ipsum dolor</h3>
       </div>
-      <div class="immagine_footer" id="grafico">
+      <div class="immagine" id="grafico">
         <h3>Lorem ipsum dolor</h3>
       </div>
     </div>
